# codex-cmd

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: development.md
docs/superpowers/plans/: 2026-06-12-codex-cmd.md
docs/superpowers/specs/: 2026-06-12-codex-cmd-design.md
scripts/: bootstrap.sh  install.sh
shell/: cx.zsh
src/codex_cmd/: __init__.py  cli.py  jsonl.py
tests/: test_cli.py  test_docs.py  test_installers.py  test_jsonl.py  test_shell.py
